# ls_core

PY101/lesson_3/: question_01.py  question_03.py  question_04.py  question_05.py  question_07.py  question_08.py  question_09.py
PY110/SPOT_Wiki_Problems/: spot_wiki_01.py  spot_wiki_02.py  spot_wiki_03.py  spot_wiki_04.py  spot_wiki_05.py  spot_wiki_06.py  spot_wiki_07.py  spot_wiki_08.py  spot_wiki_09.py  spot_wiki_10.py  spot_wiki_11.py  spot_wiki_12.py  spot_wiki_13.py  spot_wiki_14.py  spot_wiki_15.py  spot_wiki_16.py  spot_wiki_17.py  spot_wiki_18.py  spot_wiki_19.py  spot_wiki_20.py  spot_wiki_21.py  spot_wiki_22.py  spot_wiki_23.py  spot_wiki_24.py  spot_wiki_25.py  spot_wiki_26.py  spot_wiki_27.py  spot_wiki_28.py  spot_wiki_29.py  spot_wiki_30.py  spot_wiki_31.py  spot_wiki_32.py  spot_wiki_33.py  spot_wiki_34.py  spot_wiki_35.py  spot_wiki_36.py  spot_wiki_37.py  spot_wiki_38.py  spot_wiki_39.py  spot_wiki_40.py  (+8 more)
PY110/lesson_3/: tictactoe.py  tictactoe_extra_work.py  twenty_one.py
PY110/practice_problems_PY119_interview/: problem10_PY119_interview.py  problem11_PY119_interview.py  problem12_PY119_interview.py  problem13_PY119_interview.py  problem14_PY119_interview.py  problem15_PY119_interview.py  problem16_PY119_interview.py  problem17_PY119_interview.py  problem18_PY119_interview.py  problem19_PY119_interview.py  problem1_PY119_interview.py  problem20_PY119_interview.py  problem2_PY119_interview.py  (+7 more)
PY130/todolist_package/: README.md  pyproject.toml
PY130/todolist_package/src/todolist_shelbycoyle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+294 files in other folders)
