[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_shelbycoyle"
version = "0.1.1"
authors = [
    {name = "Shelby Coyle", email = "shelbycoyle13@gmail.com"},
]
description = "A fantastic todo list application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # More classifiers can be found at
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shelbycoyle13/ls_core/tree/04bf2af5507b2cccf84395f4e40eee972650a2f6/PY130/todolist"
Issues = "https://github.com/shelbycoyle13/ls_core/issues"